service/tests/models/snapshots/categories/can_find_all_categories_with_products_count_and_clamp_large_limit@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            CategoryResponse {
                id: 105,
                pid: 140c7205-f399-4aa9-9fa8-675df4aaf105,
                name: "accessories",
                slug: "accessories",
                image_link: "https://images.unsplash.com/photo-1523779917675-b6ed3a42a561?auto=format&fit=crop&w=900&q=80",
                description: Some(
                    "Finishing pieces designed to complement the core Silk wardrobe.",
                ),
                parent_id: None,
                parent_name: None,
                product_count: 3,
                created_at: 2026-06-26T08:18:00+00:00,
                updated_at: 2026-06-26T08:18:00+00:00,
                deleted_at: None,
            },
            CategoryResponse {
                id: 104,
                pid: 9de76f85-8fde-40e7-9445-e078fc4df104,
                name: "shirts",
                slug: "shirts",
                image_link: "https://images.unsplash.com/photo-1603252109303-2751441dd157?auto=format&fit=crop&w=900&q=80",
                description: Some(
                    "Smart and casual shirts for work, weekends, and every layer in between.",
                ),
                parent_id: None,
                parent_name: None,
                product_count: 2,
                created_at: 2026-06-26T08:17:00+00:00,
                updated_at: 2026-06-26T08:17:00+00:00,
                deleted_at: None,
            },
            CategoryResponse {
                id: 103,
                pid: 6f042674-322f-4933-afc8-1d3fd75599f6,
                name: "shoes",
                slug: "shoes",
                image_link: "https://images.unsplash.com/photo-1542291026-7eec264c27ff?auto=format&fit=crop&w=900&q=80",
                description: None,
                parent_id: None,
                parent_name: None,
                product_count: 2,
                created_at: 2026-06-26T08:16:00+00:00,
                updated_at: 2026-06-26T08:16:00+00:00,
                deleted_at: None,
            },
            CategoryResponse {
                id: 102,
                pid: 00b92bcb-cc7a-4a2b-bd80-e9c1b40d1c46,
                name: "trousers",
                slug: "trousers",
                image_link: "https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80",
                description: None,
                parent_id: None,
                parent_name: None,
                product_count: 2,
                created_at: 2026-06-26T08:15:00+00:00,
                updated_at: 2026-06-26T08:15:00+00:00,
                deleted_at: None,
            },
            CategoryResponse {
                id: 101,
                pid: f63b79c9-4753-40c3-bc78-8c4fd38abd5b,
                name: "t-shirts",
                slug: "t-shirts",
                image_link: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                description: None,
                parent_id: None,
                parent_name: None,
                product_count: 1,
                created_at: 2026-06-26T08:13:00+00:00,
                updated_at: 2026-06-26T08:14:00+00:00,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 40,
            total_items: 5,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
)
