service/tests/models/snapshots/categories/can_find_all_categories_with_products_count_with_second_page@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            CategoryResponse {
                id: 101,
                pid: f63b79c9-4753-40c3-bc78-8c4fd38abd5b,
                name: "t-shirts",
                slug: "t-shirts",
                image_link: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                description: None,
                parent_id: None,
                parent_name: None,
                product_count: 1,
                created_at: 2026-06-26T08:13:00+00:00,
                updated_at: 2026-06-26T08:14:00+00:00,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 2,
            limit: 2,
            total_items: 3,
            total_pages: 2,
            has_next: false,
            has_prev: true,
        },
    },
)
