service/tests/models/snapshots/categories/can_find_shoes_category_by_pid@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: 103,
        pid: 6f042674-322f-4933-afc8-1d3fd75599f6,
        name: "shoes",
        slug: "shoes",
        image_link: "https://images.unsplash.com/photo-1542291026-7eec264c27ff?auto=format&fit=crop&w=900&q=80",
        description: None,
        parent_id: None,
        created_at: 2026-06-26T08:16:00+00:00,
        updated_at: 2026-06-26T08:16:00+00:00,
        deleted_at: None,
    },
)
